# warp-mobile-android

./: .envrc  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  NOTICE.md  README.md  SECURITY.md  deny.toml  progress.txt
.cargo/: config.toml.template
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-bootstrap.yml  release.yml  test.yml
.omc/: m2-kickoff.md  m7-plan-warp-ux-layer.md  prd.json  release-checklist.md  v1-prep-regression-checks.json  v1-prep-uiux-verification.md  v1-release-kickoff.md  v1.1-plan-selinux-nativelib.md
.omc/audit/: pre-public-audit.md
.omc/handoffs/: lead-context-snapshot.md  team-plan.md
.omc/m0-artifacts/: M0-deps-report.md  M0-env-report.md  M0-facade-scaffold.md  M0-go-no-go.md  M0-lead-summary-partial.md  M0-platform-trait-delta.md  M0-symlink-jnilibs.md  M0-task11-install-verify.md  M0-task13-surface-fix-verify.md  M0-task13-vulkan-fix-verify.md  M0-task15-swapchain-verify.md  M0-tension3-decision.md  M0-vulkan-spike-report.md
.omc/m1-artifacts/: M1-S05-evidence-v2.md  M1-S05-evidence.md  M1-S06-result.json  M1-S07-result.json  M1-S08-result.json  M1-S09-result.json  M1-go-no-go.md  M1-prd-final.json  M1-stress-test.md
.omc/m2-artifacts/: M2-S04-result.json  M2-S05-result.json  M2-S05-stress-50-result.json  M2-S05-stress-result.json  M2-S07-result.json  M2-S08-result.json  M2-S09-result.json  M2-S10-result.json  M2-S11-result.json  M2-S12-result.json  M2-go-no-go.md  M2-kickoff-confirmed.md  M2-prd-final.json
.omc/m3-artifacts/: M3-S05-logcat-evidence.txt  M3-S05-result.json  M3-S07-result.json  M3-S08-logcat-evidence.txt  M3-S08-result.json  M3-S09-frames.txt  M3-S09-logcat-broadcast.txt  M3-S09-logcat-evidence.txt  M3-S09-logcat-gesture.txt  M3-S09-result.json  M3-S10-apk-listing.txt  M3-S10-result.json  M3-S11-cherry-pick-log.txt  M3-S11-result.json  M3-go-no-go.md  M3-kickoff-confirmed.md
.omc/m4-artifacts/: M4-S02-result.json  M4-S03-execution-log.md  M4-S03-result.json  M4-S03-strategy.md  M4-S08-reproducibility-verify.json  M4-S14-result.json  M4-go-no-go.md  M4-kickoff-confirmed.md
.omc/m5-artifacts/: M5-go-no-go.md
.omc/m6-artifacts/: M6-go-no-go.md  M6-kickoff-confirmed.md
.omc/plans/: open-questions.md  ralplan-warp-on-mobile.md
.omc/v1-prep-artifacts/: test-ime-input-pty-result.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/dev/warp/mobile/: AccessoryRow.kt  AgentBlockSheet.kt  AiConnectivity.kt  AiKeyStore.kt  AiUsageTracker.kt  AnthropicClient.kt  BlockActionsSheet.kt  CaptureFrameReceiver.kt  GhostSuggestController.kt  GhostSuggestSimulationReceiver.kt  ImeSimulationReceiver.kt  MainActivity.kt  NativeBridge.kt  PtyBroadcastReceiver.kt  PtyManager.kt  SettingsActivity.kt  TerminalSimulationReceiver.kt  TouchSimulationReceiver.kt  WarpInputView.kt  WarpTerminalService.kt
android/app/src/main/java/dev/warp/mobile/ui/: WarpAppTheme.kt  WarpScaffold.kt
android/app/src/main/res/drawable/: ic_notification.xml
android/app/src/main/res/values/: strings.xml
crates/android-host/: Cargo.toml  README.md  build.rs
crates/android-host/shaders/: dynamic_grid.frag  dynamic_grid.vert  grid.frag  grid.vert
crates/android-host/src/: bootstrap.rs  dynamic_grid.rs  font_picker.rs  font_render.rs  ime.rs  input.rs  lib.rs  pty.rs  static_grid.rs  terminal_model.rs  vulkan.rs
crates/warp_ai_mobile/: Cargo.toml
crates/warp_ai_mobile/src/: client.rs  lib.rs
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 1.txt  6.txt
metadata/: dev.warp.mobile.yml
scripts/: run-symlink-test.sh
spikes/symlink-jnilibs/: settings.gradle
spikes/symlink-jnilibs/app/: build.gradle
spikes/symlink-jnilibs/app/src/main/: AndroidManifest.xml
spikes/symlink-jnilibs/app/src/main/java/dev/warp/symlinktest/: MainActivity.kt
spikes/symlink-jnilibs/app/src/main/res/values/: strings.xml
spikes/symlink-jnilibs/hello-exec/: Cargo.toml
spikes/symlink-jnilibs/hello-exec/src/: main.rs
spikes/vulkan-surface-recreate/: Cargo.toml  README.md
spikes/vulkan-surface-recreate/android/: gradlew  settings.gradle
spikes/vulkan-surface-recreate/android/app/: AndroidManifest.xml  build.gradle
spikes/vulkan-surface-recreate/android/app/src/main/: AndroidManifest.xml
spikes/vulkan-surface-recreate/android/app/src/main/java/com/warpmobile/spike/: MainActivity.kt
spikes/vulkan-surface-recreate/scripts/: run-vulkan-spike.sh
spikes/vulkan-surface-recreate/src/: lib.rs
tools/scripts/: build-bootstrap.sh  m4-bootstrap-packages.txt  m4-bootstrap-snapshot.sha256  release.sh  setup-cargo-config.sh  test-30min-idle-stress.sh  test-ansi-color.sh  test-block-model.sh  test-bootstrap-install.sh  test-dynamic-grid.sh  test-fgs-clean-kill.sh  test-font-render.sh  test-frame-capture-stress.sh  test-frame-capture.sh  test-ime-input-pty.sh  test-ime.sh  test-pkg-install.sh  test-pty-reattach.sh  test-pty-resize.sh  test-render-scene.sh  test-rotation-stress.sh  test-scroll.sh  test-static-grid.sh  test-touch.sh  test-window-insets.sh  test-zsh-asset.sh
tools/scripts/lib/: keep-awake.sh
