[package]
name = "warp-mobile-android-host"
version = "0.1.0"
edition = "2021"
# M2-S08: build.rs compiles GLSL -> SPIR-V via NDK's glslc on the host. The
# target Android binary embeds the resulting .spv via include_bytes!. See
# build.rs for rationale (shaderc-rs has Android cross-compile issues).
build = "build.rs"

[lib]
name = "warp_mobile_android_host"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
log = "0.4"
android_logger = "0.13"
# M3-S07: hand-decode of the M3-essential DProtoHook variants (Precmd,
# Preexec, CommandFinished) for Block aggregation in the mirror runtime.
# The canonical facade in warp-src already pulls these in; the mirror does
# its own hand-decode to avoid the Cargo edge to the facade rlib (which
# would re-introduce the cross-workspace dup tracked under M3-S11).
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
# M4-S12: shared rlib hosting the canonical `static_grid` + `dynamic_grid`
# implementations (Option D shared-rlib API split). This is what eliminates
# the M2-era + M3-S08 cross-workspace mirrors that were tracked under
# M3-S11-result.json `next_milestone_action`. The crate sits in the
# warp-src workspace (`warp-src/crates/warp_mobile_android_link/`) so the
# canonical impl lives next to the warpui consumer; the path dep here is
# how the main-repo cdylib pulls it in. Verified Metal-clean via
# `cargo tree -p warp_mobile_android_link --target aarch64-linux-android |
# grep -i metal` returning empty.
warp_mobile_android_link = { path = "../../warp-src/crates/warp_mobile_android_link" }
ndk = "0.9"
ndk-sys = "0.6"
# M2-S04: Vulkan via ash + ANativeWindow. The CANONICAL implementation is in
# `warp-src/crates/warpui/src/platform/android/vulkan.rs` (per M2-S04 AC#1).
# This crate hosts an equivalent runtime harness because cross-workspace path
# deps (warp-src has its own `workspace.package` inheritance not present in
# the main repo) would require a major refactor of warpui's manifest. Both
# implementations follow the same M0 spike (`spikes/vulkan-surface-recreate/`)
# pattern. The harness here is the production runtime path until M3 unifies
# the workspaces.
ash = "0.38"
# M2-S05: PNG encoding for `request_frame_capture`. Pure-Rust, no system deps,
# cross-compiles cleanly to aarch64-linux-android. Chosen over `image` because
# image's default features pull in JPEG/GIF/etc. decoders we don't need; the
# `png` crate is image's underlying PNG codec anyway.
# Ref: <https://github.com/image-rs/image-png>
png = { version = "0.17", default-features = false }
# M2-S07: cosmic-text + fontdb for the device-side font-render harness.
# The CANONICAL FontDB lives in `warp-src/crates/warpui/src/platform/android/font.rs`
# (mirrors the desktop windowing/winit/fonts.rs); this crate mirrors the
# subset needed to verify "Hello, 世界" glyph rasterization on device end-to-
# end without depending on warpui (cross-workspace gap noted above).
# Same warpdotdev fork rev as warpui so behaviour matches.
# Refs:
#   <https://github.com/warpdotdev/cosmic-text>
#   <https://github.com/pop-os/cosmic-text/issues/243>
cosmic-text = { git = "https://github.com/warpdotdev/cosmic-text.git", rev = "15198beba692162201c0ea8b15222cf5643ea068" }
fontdb = "0.23.0"
