[package]
name = "vulkan-surface-recreate"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ash = "0.38"
jni = "0.21"
log = "0.4"
android_logger = "0.14"
libc = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
ash = { version = "0.38", features = [] }
ndk-sys = "0.6"
